Bugfix: tag list overlaps content when stuck

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,7 +23,8 @@
 }
 
 .verse-container-wrapper {
-  padding: 0 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .verse {
