--- a/src/app/tag-list/tag-list.component.scss
+++ b/src/app/tag-list/tag-list.component.scss
@@ -2,7 +2,6 @@
 
 :host {
   line-height: 2em;
-  margin-bottom: 30px;
   font-weight: 400;
   z-index: 2;
 
